force-app/main/default/objects/User/fields/AgentsURL__c.field-meta.xml
<CustomField>
    <fullName>AgentsURL__c</fullName>
    <label>Agent&apos;s URL</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>