force-app/main/default/objects/User/fields/Bypass_Lookup_Filter__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Lookup_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Lookup Filter</label>
    <type>Checkbox</type>
</CustomField>