force-app/main/default/objects/User/fields/ID_Agent_Check_MessageBird__c.field-meta.xml
<CustomField>
    <fullName>ID_Agent_Check_MessageBird__c</fullName>
    <formula>IF(OR(Profile.Name==&apos; PT1&apos;,Profile.Name==&apos;ID - ANI Call Center Agent&apos;,Profile.Name==&apos;ID - ANI Call Center Manager&apos;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID_Agent_Check(MessageBird)</label>
    <type>Checkbox</type>
</CustomField>