force-app/main/default/objects/User/fields/MC_IN_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_IN_Sync_Eligibility__c</fullName>
    <formula>Market__c = &apos;IN&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC IN Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>