force-app/main/default/objects/User/fields/MC_PH_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_PH_Sync_Eligibility__c</fullName>
    <formula>Market__c = &apos;PH&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC PH Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>