force-app/main/default/objects/User/fields/MC_TH_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_TH_Sync_Eligibility__c</fullName>
    <formula>Market__c = &apos;TH&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC TH Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>