force-app/main/default/objects/User/fields/MC_VN_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_VN_Sync_Eligibility__c</fullName>
    <formula>Market__c = &apos;VN&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC VN Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>