force-app/main/default/objects/User/fields/SingleSignOn__c.field-meta.xml
<CustomField>
    <fullName>SingleSignOn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SingleSignOn</label>
    <type>Checkbox</type>
</CustomField>