force-app/main/default/objects/User/fields/SSO_AgentId__c.field-meta.xml
<CustomField>
    <fullName>SSO_AgentId__c</fullName>
    <label>SSO_AgentId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>