force-app/main/default/objects/User/fields/SSO_Pwd__c.field-meta.xml
<CustomField>
    <fullName>SSO_Pwd__c</fullName>
    <label>SSO_Pwd</label>
    <length>50</length>
    <type>Text</type>
</CustomField>