force-app/main/default/objects/User/fields/VN_Team__c.field-meta.xml
<CustomField>
    <fullName>VN_Team__c</fullName>
    <label>VN_Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Deloitte</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Similac T2</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Similac T1</fullName>
            </value>
            <value>
                <fullName>Similac T4</fullName>
            </value>
            <value>
                <fullName>Similac T3</fullName>
            </value>
            <value>
                <fullName>Supporting Team</fullName>
            </value>
            <value>
                <fullName>Ensure T3</fullName>
            </value>
            <value>
                <fullName>Grow T2</fullName>
            </value>
            <value>
                <fullName>Grow T1</fullName>
            </value>
            <value>
                <fullName>Grow T3</fullName>
            </value>
            <value>
                <fullName>Grow T4</fullName>
            </value>
            <value>
                <fullName>Ensure T4</fullName>
            </value>
            <value>
                <fullName>Ensure T2</fullName>
            </value>
            <value>
                <fullName>Glucerna T4</fullName>
            </value>
            <value>
                <fullName>Glucerna T2</fullName>
            </value>
            <value>
                <fullName>Glucerna T1</fullName>
            </value>
            <value>
                <fullName>Ensure T1</fullName>
            </value>
            <value>
                <fullName>Glucerna T3</fullName>
            </value>
            <value>
                <fullName>Community Team</fullName>
            </value>
            <value>
                <fullName>CFH</fullName>
            </value>
            <value>
                <fullName>Simiac T4</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Merkle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>